<?xml version="1.0"?>
<package format="2">
  <name>cream_sooo</name>
  <version>0.0.1</version>
  <description>The hazard_detection package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- 빌드 도구 의존성 -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- 런타임 의존성 -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>jsk_recognition_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>


  <export>
    <!-- 추가적인 정보가 필요하면 여기에 작성 -->
  </export>
</package>
